<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingVertical="8dp"
    android:paddingHorizontal="12dp"
    android:background="@drawable/back_task_item"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="12dp">

    <TextView
        android:id="@+id/task_dialog_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_task"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:paddingVertical="4dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="12dp"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/task_title_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_new_task_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_new_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_btn"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:background="@drawable/dialog_cancel_back"
        app:backgroundTint="@color/green_500"/>

</LinearLayout>