<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_main_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_main_back"
    android:backgroundTint="@color/teal_200"
    android:hapticFeedbackEnabled="false"
    android:paddingHorizontal="12dp"
    android:paddingVertical="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ask_delete_all"
            android:textAlignment="center"
            android:textColor="@color/red_700"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/dialog_ok_back"
                android:elevation="8dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/dialog_ok"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold"
                app:backgroundTint="@color/red_700" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/dialog_cancel_back"
                android:elevation="8dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/dialog_cancel"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold"
                app:backgroundTint="@color/green_500" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>